feat: criei a rota dos logs
