# src/routes/gestaoNotificacao/ocorrencias.routes.ts
@@ -14,5 +14,11 @@ ocorrenciaRoutes.route("/ocorrencias/:id")
     .put(authMiddleware, gepAuthMiddleware, OcorenciaController.save)
     .delete(authMiddleware, gepAuthMiddleware, OcorenciaController.delete);
 
+ocorrenciaRoutes.route("/log-ocorrencias")
+    .get(authMiddleware,  gepAuthMiddleware, OcorenciaController.selectLog);
+
+ocorrenciaRoutes.route("/log-ocorrencias/:id")
+    .get(authMiddleware,  gepAuthMiddleware, OcorenciaController.selectLog);
+
 export default ocorrenciaRoutes;
 
