# src/swagger.json
@@ -7,6 +7,10 @@
   },
   "servers": [
     {
+      "url": "https://virtserver.swaggerhub.com/rossienzo/sistema-de-nofiticacoes/1.0.0",
+      "description": "SwaggerHub API Auto Mocking"
+    },
+    {
       "url": "http://localhost:3000/api",
       "description": "API de teste"
     },
@@ -3512,6 +3516,328 @@
           }
         ]
       }
+    },
+    "/log-ocorrencias/": {
+      "get": {
+        "tags": [
+          "Logs"
+        ],
+        "summary": "Retorna todas os dados do log de ocorrências",
+        "description": "Rota responsável por retornar o log de ações executada nas ocorrências.",
+        "responses": {
+          "200": {
+            "description": "data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LogOcorrencia"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro de requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "examples": {
+                  "Erro 1": {
+                    "description": "Erro referente ao token JWT utilizado no Bearer",
+                    "value": {
+                      "message": "Token inválido."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Acesso não autorizado.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "example": {
+                  "message": "Acesso não autorizado."
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Acesso negado",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Acesso negado. O usuário não é de Gestão de Estratégica de Pessoas."
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/log-ocorrencias/{id}": {
+      "get": {
+        "tags": [
+          "Logs"
+        ],
+        "summary": "Busca um item do log de ocorrência",
+        "description": "Rota responsável por retornar um item do log de ocorrências.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id relacionado a um item do log de ocorrência.",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LogOcorrencia"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro de requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "examples": {
+                  "Erro 1": {
+                    "value": {
+                      "message": "O item do log de ocorrência não foi encontrado."
+                    }
+                  },
+                  "Erro 2": {
+                    "description": "Erro referente ao token JWT utilizado no Bearer",
+                    "value": {
+                      "message": "Token inválido."
+                    }
+                  },
+                  "Erro 3": {
+                    "description": "O parâmetro não é um inteiro",
+                    "value": {
+                      "message": "Id inválido."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Acesso não autorizado.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "example": {
+                  "message": "Acesso não autorizado."
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Acesso negado",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Acesso negado. O usuário não é de Gestão de Estratégica de Pessoas."
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/log-sharks/": {
+      "get": {
+        "tags": [
+          "Logs"
+        ],
+        "summary": "Retorna todas os dados do log de sharks",
+        "description": "Rota responsável por retornar o log de ações executada nos sharks.",
+        "responses": {
+          "200": {
+            "description": "data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LogShark"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro de requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "examples": {
+                  "Erro 1": {
+                    "description": "Erro referente ao token JWT utilizado no Bearer",
+                    "value": {
+                      "message": "Token inválido."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Acesso não autorizado.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "example": {
+                  "message": "Acesso não autorizado."
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Acesso negado",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Acesso negado. O usuário não é de Gestão de Estratégica de Pessoas."
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/log-sharks/{id}": {
+      "get": {
+        "tags": [
+          "Logs"
+        ],
+        "summary": "Busca um item do log de shark",
+        "description": "Rota responsável por retornar um item do log de sharks.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id relacionado a um item do log de shark.",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LogShark"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro de requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "examples": {
+                  "Erro 1": {
+                    "value": {
+                      "message": "O item do log de shark não foi encontrado."
+                    }
+                  },
+                  "Erro 2": {
+                    "description": "Erro referente ao token JWT utilizado no Bearer",
+                    "value": {
+                      "message": "Token inválido."
+                    }
+                  },
+                  "Erro 3": {
+                    "description": "O parâmetro não é um inteiro",
+                    "value": {
+                      "message": "Id inválido."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Acesso não autorizado.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                },
+                "example": {
+                  "message": "Acesso não autorizado."
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Acesso negado",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Acesso negado. O usuário não é de Gestão de Estratégica de Pessoas."
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -3941,6 +4267,57 @@
           }
         }
       },
+      "TipoAcaoLog": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "nome": {
+            "type": "string"
+          }
+        }
+      },
+      "LogOcorrencia": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "tipoAcaoLog": {
+            "$ref": "#/components/schemas/TipoAcaoLog"
+          },
+          "ocorrencia": {
+            "$ref": "#/components/schemas/LogOcorrencia_ocorrencia"
+          },
+          "sharkEditor": {
+            "$ref": "#/components/schemas/LogOcorrencia_sharkEditor"
+          },
+          "dataAcao": {
+            "type": "string"
+          }
+        }
+      },
+      "LogShark": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "tipoAcaoLog": {
+            "$ref": "#/components/schemas/TipoAcaoLog"
+          },
+          "ocorrencia": {
+            "$ref": "#/components/schemas/LogOcorrencia_ocorrencia"
+          },
+          "sharkEditor": {
+            "$ref": "#/components/schemas/LogOcorrencia_sharkEditor"
+          },
+          "dataAcao": {
+            "type": "string"
+          }
+        }
+      },
       "inline_response_200": {
         "type": "object",
         "properties": {
@@ -4055,6 +4432,42 @@
           "exp": {
             "type": "number",
             "description": "timestamp de quando o token irá expirar"
+          }
+        }
+      },
+      "LogOcorrencia_ocorrencia_sharkCriador": {
+        "type": "object",
+        "properties": {
+          "nome": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          }
+        }
+      },
+      "LogOcorrencia_ocorrencia": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "sharkCriador": {
+            "$ref": "#/components/schemas/LogOcorrencia_ocorrencia_sharkCriador"
+          }
+        }
+      },
+      "LogOcorrencia_sharkEditor": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "nome": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
           }
         }
       }
